# DEDS_portfolio

Week1/: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten.ipynb  DEDS_WC_1.2_en_1.3_Opdrachten.ipynb  Script.ipynb  main.py  pyproject.toml
Week1/.ipynb_checkpoints/: DEDS_WC_1.1a_Opdrachten-checkpoint.ipynb
Week1/project/data/processed/: vraag1.xlsx  vraag10.xlsx  vraag11.xlsx  vraag12.xlsx  vraag13.xlsx  vraag14.xlsx  vraag15.xlsx  vraag16.xlsx  vraag17.xlsx  vraag18.xlsx  vraag19.xlsx  vraag2.xlsx  vraag20.xlsx  vraag21.xlsx  vraag22.xlsx  vraag23.xlsx  vraag24.xlsx  vraag25.xlsx  vraag26.xlsx  vraag27.xlsx  vraag28.xlsx  vraag29.xlsx  vraag3.xlsx  vraag30.xlsx  vraag4.xlsx  vraag5.xlsx  vraag6.xlsx  vraag7.xlsx  vraag8.xlsx  vraag9.xlsx
Week1/src/: main.py  notebook.ipynb  notebook.py  script.py  setting.py
Week2/: gecombineerd_database.vpp  gecombineerd_database.vpp.bak_000f  go_crm_databasemodel.vpp  go_sales_train_databasemodel.vpp  go_staff_train_databasemodel.vpp
Week2/hulp_middelen/: go_crm_databasemodel.vpp
Week2/opdr/: csv_naar_database.ipynb  sqlite_naar_database.ipynb
Week2/opdr_retry/: data_naar-database.ipynb  (+1 more)
Week3/: DEDS-HC-3.1 - Datawarehouse Design(1).pptx  DEDS-HC3.2 - Data Warehouse Implementation(1).pptx  DEDS-WC-3.1 Opdrachten.docx  DEDS-WC-3.2 & -3.3 Opdrachten.docx
week4/: DEDS-HC-4.1 - Power BI.pptx  DEDS-WC-4.1 Opdrachten.docx  DEDS-WC-4.2 & -4.3 Opdrachten.docx
week5_group_project/: DEDS-DE-projectbeschrijving 2425.docx  Domeinanalyse opdracht.docx  Format Samenwerkingscontract.docx  database_checken.ipynb
(+30 files in other folders)
