[project]
name = "deds-portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "I-am-SPEED-95",email = "162584160+I-am-SPEED-95@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
